proyecto/source/y.output
   0  $accept : input $end

   1  input :
   2        | input line

   3  line : programa

   4  programa : decl_proto decl_var decl_func

   5  decl_proto : PROTO tipo ID LPAR argumentos RPAR SEMICOLON decl_proto
   6             |

   7  decl_var : tipo lista_var SEMICOLON decl_var
   8           |

   9  tipo : basico compuesto
  10       | STRUCT LLLAVE decl_var RLLAVE
  11       | puntero

  12  puntero : PTR basico

  13  basico : INT
  14         | FLOAT
  15         | DOUBLE
  16         | COMPLEX
  17         | RUNE
  18         | VOID
  19         | STRING

  20  compuesto : LCORCHETE LITERAL_ENTERA RCORCHETE compuesto
  21            |

  22  lista_var : lista_var COMA ID
  23            | ID

  24  $$1 :

  25  decl_func : $$1 FUNC tipo ID LPAR argumentos RPAR bloque decl_func
  26            |

  27  argumentos : lista_args
  28             |

  29  lista_args : lista_args COMA tipo ID
  30             | tipo ID

  31  bloque : LLLAVE declaraciones instrucciones RLLAVE

  32  declaraciones : decl_var

  33  instrucciones : instrucciones sentencia
  34                | sentencia

  35  sentencia : asignacion

  36  $$2 :

  37  sentencia : $$2 resolve

  38  resolve : matched_stmt M

  39  matched_stmt : IF LPAR exp1 RPAR M matched_stmt
  40               | IF LPAR exp1 RPAR M matched_stmt ELSE N M matched_stmt
  41               | WHILE LPAR M exp1 RPAR M matched_stmt
  42               | DO matched_stmt WHILE LPAR exp RPAR SEMICOLON
  43               | BREAK SEMICOLON
  44               | bloque
  45               | RETURN exp SEMICOLON
  46               | RETURN SEMICOLON
  47               | SWITCH LPAR exp RPAR LLLAVE casos RLLAVE
  48               | PRINT exp SEMICOLON
  49               | SCAN parte_izquierda

  50  M :

  51  N :

  52  asignacion : parte_izquierda ASIG exp SEMICOLON

  53  casos : caso casos
  54        | PRED
  55        |

  56  caso : CASE opcion COLON instrucciones

  57  opcion : LITERAL_ENTERA
  58         | LITERAL_RUNA

  59  parte_izquierda : ID localizacion
  60                  | ID

  61  localizacion : arreglo
  62               | estructurado

  63  arreglo : arreglo LCORCHETE exp RCORCHETE
  64          | LCORCHETE exp RCORCHETE

  65  estructurado : estructurado PUNTO ID
  66               | PUNTO ID

  67  parametros : lista_param
  68             |

  69  lista_param : lista_param COMA exp
  70              | exp

  71  exp : LITERAL_ENTERA
  72      | exp SUMA exp
  73      | exp RESTA exp
  74      | exp MULTI exp
  75      | LPAR exp RPAR
  76      | exp DIVI exp
  77      | RESTA exp
  78      | exp POTE exp
  79      | exp OR M exp
  80      | exp AND exp
  81      | exp IGUAL exp
  82      | exp DESIGUAL exp
  83      | exp MENORQUE exp
  84      | exp MENORIGUAL exp
  85      | exp MAYORQUE exp
  86      | exp MAYORIGUAL exp
  87      | exp MOD exp
  88      | exp DIVENTERA exp
  89      | NEG exp
  90      | ID
  91      | ID '(' parametros ')'
  92      | TRUE
  93      | FALSE

  94  exp1 : exp1 OR M exp1
  95       | exp1 AND M exp1
  96       | LPAR exp1 RPAR
  97       | exp1 IGUAL exp1
  98       | exp1 DESIGUAL exp1
  99       | exp1 MENORQUE exp1
 100       | exp1 MENORIGUAL exp1
 101       | exp1 MAYORQUE exp1
 102       | exp1 MAYORIGUAL exp1
 103       | NEG exp1
 104       | ID
 105       | ID '(' parametros ')'
 106       | TRUE
 107       | FALSE
 108       | LITERAL_ENTERA

state 0
	$accept : . input $end  (0)
	input : .  (1)

	.  reduce 1

	input  goto 1


1: shift/reduce conflict (shift 2, reduce 6) on PROTO
state 1
	$accept : input . $end  (0)
	input : input . line  (2)
	decl_proto : .  (6)

	$end  accept
	PROTO  shift 2
	$end  reduce 6
	STRUCT  reduce 6
	PTR  reduce 6
	INT  reduce 6
	FLOAT  reduce 6
	DOUBLE  reduce 6
	COMPLEX  reduce 6
	RUNE  reduce 6
	VOID  reduce 6
	STRING  reduce 6
	FUNC  reduce 6

	line  goto 3
	programa  goto 4
	decl_proto  goto 5


state 2
	decl_proto : PROTO . tipo ID LPAR argumentos RPAR SEMICOLON decl_proto  (5)

	STRUCT  shift 6
	PTR  shift 7
	INT  shift 8
	FLOAT  shift 9
	DOUBLE  shift 10
	COMPLEX  shift 11
	RUNE  shift 12
	VOID  shift 13
	STRING  shift 14
	.  error

	tipo  goto 15
	basico  goto 16
	puntero  goto 17


state 3
	input : input line .  (2)

	.  reduce 2


state 4
	line : programa .  (3)

	.  reduce 3


5: shift/reduce conflict (shift 6, reduce 8) on STRUCT
5: shift/reduce conflict (shift 7, reduce 8) on PTR
5: shift/reduce conflict (shift 8, reduce 8) on INT
5: shift/reduce conflict (shift 9, reduce 8) on FLOAT
5: shift/reduce conflict (shift 10, reduce 8) on DOUBLE
5: shift/reduce conflict (shift 11, reduce 8) on COMPLEX
5: shift/reduce conflict (shift 12, reduce 8) on RUNE
5: shift/reduce conflict (shift 13, reduce 8) on VOID
5: shift/reduce conflict (shift 14, reduce 8) on STRING
state 5
	programa : decl_proto . decl_var decl_func  (4)
	decl_var : .  (8)

	STRUCT  shift 6
	PTR  shift 7
	INT  shift 8
	FLOAT  shift 9
	DOUBLE  shift 10
	COMPLEX  shift 11
	RUNE  shift 12
	VOID  shift 13
	STRING  shift 14
	$end  reduce 8
	PROTO  reduce 8
	FUNC  reduce 8

	decl_var  goto 18
	tipo  goto 19
	basico  goto 16
	puntero  goto 17


state 6
	tipo : STRUCT . LLLAVE decl_var RLLAVE  (10)

	LLLAVE  shift 20
	.  error


state 7
	puntero : PTR . basico  (12)

	INT  shift 8
	FLOAT  shift 9
	DOUBLE  shift 10
	COMPLEX  shift 11
	RUNE  shift 12
	VOID  shift 13
	STRING  shift 14
	.  error

	basico  goto 21


state 8
	basico : INT .  (13)

	.  reduce 13


state 9
	basico : FLOAT .  (14)

	.  reduce 14


state 10
	basico : DOUBLE .  (15)

	.  reduce 15


state 11
	basico : COMPLEX .  (16)

	.  reduce 16


state 12
	basico : RUNE .  (17)

	.  reduce 17


state 13
	basico : VOID .  (18)

	.  reduce 18


state 14
	basico : STRING .  (19)

	.  reduce 19


state 15
	decl_proto : PROTO tipo . ID LPAR argumentos RPAR SEMICOLON decl_proto  (5)

	ID  shift 22
	.  error


state 16
	tipo : basico . compuesto  (9)
	compuesto : .  (21)

	LCORCHETE  shift 23
	ID  reduce 21

	compuesto  goto 24


state 17
	tipo : puntero .  (11)

	.  reduce 11


18: reduce/reduce conflict (reduce 24, reduce 26) on FUNC
state 18
	programa : decl_proto decl_var . decl_func  (4)
	$$1 : .  (24)
	decl_func : .  (26)

	$end  reduce 26
	PROTO  reduce 26
	STRUCT  reduce 26
	PTR  reduce 26
	INT  reduce 26
	FLOAT  reduce 26
	DOUBLE  reduce 26
	COMPLEX  reduce 26
	RUNE  reduce 26
	VOID  reduce 26
	STRING  reduce 26
	FUNC  reduce 24

	decl_func  goto 25
	$$1  goto 26


state 19
	decl_var : tipo . lista_var SEMICOLON decl_var  (7)

	ID  shift 27
	.  error

	lista_var  goto 28


state 20
	tipo : STRUCT LLLAVE . decl_var RLLAVE  (10)
	decl_var : .  (8)

	STRUCT  shift 6
	PTR  shift 7
	INT  shift 8
	FLOAT  shift 9
	DOUBLE  shift 10
	COMPLEX  shift 11
	RUNE  shift 12
	VOID  shift 13
	STRING  shift 14
	RLLAVE  reduce 8

	decl_var  goto 29
	tipo  goto 19
	basico  goto 16
	puntero  goto 17


state 21
	puntero : PTR basico .  (12)

	.  reduce 12


state 22
	decl_proto : PROTO tipo ID . LPAR argumentos RPAR SEMICOLON decl_proto  (5)

	LPAR  shift 30
	.  error


state 23
	compuesto : LCORCHETE . LITERAL_ENTERA RCORCHETE compuesto  (20)

	LITERAL_ENTERA  shift 31
	.  error


state 24
	tipo : basico compuesto .  (9)

	.  reduce 9


state 25
	programa : decl_proto decl_var decl_func .  (4)

	.  reduce 4


state 26
	decl_func : $$1 . FUNC tipo ID LPAR argumentos RPAR bloque decl_func  (25)

	FUNC  shift 32
	.  error


state 27
	lista_var : ID .  (23)

	.  reduce 23


state 28
	decl_var : tipo lista_var . SEMICOLON decl_var  (7)
	lista_var : lista_var . COMA ID  (22)

	COMA  shift 33
	SEMICOLON  shift 34
	.  error


state 29
	tipo : STRUCT LLLAVE decl_var . RLLAVE  (10)

	RLLAVE  shift 35
	.  error


state 30
	decl_proto : PROTO tipo ID LPAR . argumentos RPAR SEMICOLON decl_proto  (5)
	argumentos : .  (28)

	STRUCT  shift 6
	PTR  shift 7
	INT  shift 8
	FLOAT  shift 9
	DOUBLE  shift 10
	COMPLEX  shift 11
	RUNE  shift 12
	VOID  shift 13
	STRING  shift 14
	RPAR  reduce 28

	tipo  goto 36
	argumentos  goto 37
	basico  goto 16
	puntero  goto 17
	lista_args  goto 38


state 31
	compuesto : LCORCHETE LITERAL_ENTERA . RCORCHETE compuesto  (20)

	RCORCHETE  shift 39
	.  error


state 32
	decl_func : $$1 FUNC . tipo ID LPAR argumentos RPAR bloque decl_func  (25)

	STRUCT  shift 6
	PTR  shift 7
	INT  shift 8
	FLOAT  shift 9
	DOUBLE  shift 10
	COMPLEX  shift 11
	RUNE  shift 12
	VOID  shift 13
	STRING  shift 14
	.  error

	tipo  goto 40
	basico  goto 16
	puntero  goto 17


state 33
	lista_var : lista_var COMA . ID  (22)

	ID  shift 41
	.  error


34: shift/reduce conflict (shift 6, reduce 8) on STRUCT
34: shift/reduce conflict (shift 7, reduce 8) on PTR
34: shift/reduce conflict (shift 8, reduce 8) on INT
34: shift/reduce conflict (shift 9, reduce 8) on FLOAT
34: shift/reduce conflict (shift 10, reduce 8) on DOUBLE
34: shift/reduce conflict (shift 11, reduce 8) on COMPLEX
34: shift/reduce conflict (shift 12, reduce 8) on RUNE
34: shift/reduce conflict (shift 13, reduce 8) on VOID
34: shift/reduce conflict (shift 14, reduce 8) on STRING
state 34
	decl_var : tipo lista_var SEMICOLON . decl_var  (7)
	decl_var : .  (8)

	STRUCT  shift 6
	PTR  shift 7
	INT  shift 8
	FLOAT  shift 9
	DOUBLE  shift 10
	COMPLEX  shift 11
	RUNE  shift 12
	VOID  shift 13
	STRING  shift 14
	$end  reduce 8
	ID  reduce 8
	PROTO  reduce 8
	FUNC  reduce 8
	IF  reduce 8
	WHILE  reduce 8
	DO  reduce 8
	BREAK  reduce 8
	RETURN  reduce 8
	SWITCH  reduce 8
	PRINT  reduce 8
	SCAN  reduce 8
	LLLAVE  reduce 8
	RLLAVE  reduce 8

	decl_var  goto 42
	tipo  goto 19
	basico  goto 16
	puntero  goto 17


state 35
	tipo : STRUCT LLLAVE decl_var RLLAVE .  (10)

	.  reduce 10


state 36
	lista_args : tipo . ID  (30)

	ID  shift 43
	.  error


state 37
	decl_proto : PROTO tipo ID LPAR argumentos . RPAR SEMICOLON decl_proto  (5)

	RPAR  shift 44
	.  error


state 38
	argumentos : lista_args .  (27)
	lista_args : lista_args . COMA tipo ID  (29)

	COMA  shift 45
	RPAR  reduce 27


state 39
	compuesto : LCORCHETE LITERAL_ENTERA RCORCHETE . compuesto  (20)
	compuesto : .  (21)

	LCORCHETE  shift 23
	ID  reduce 21

	compuesto  goto 46


state 40
	decl_func : $$1 FUNC tipo . ID LPAR argumentos RPAR bloque decl_func  (25)

	ID  shift 47
	.  error


state 41
	lista_var : lista_var COMA ID .  (22)

	.  reduce 22


state 42
	decl_var : tipo lista_var SEMICOLON decl_var .  (7)

	.  reduce 7


state 43
	lista_args : tipo ID .  (30)

	.  reduce 30


state 44
	decl_proto : PROTO tipo ID LPAR argumentos RPAR . SEMICOLON decl_proto  (5)

	SEMICOLON  shift 48
	.  error


state 45
	lista_args : lista_args COMA . tipo ID  (29)

	STRUCT  shift 6
	PTR  shift 7
	INT  shift 8
	FLOAT  shift 9
	DOUBLE  shift 10
	COMPLEX  shift 11
	RUNE  shift 12
	VOID  shift 13
	STRING  shift 14
	.  error

	tipo  goto 49
	basico  goto 16
	puntero  goto 17


state 46
	compuesto : LCORCHETE LITERAL_ENTERA RCORCHETE compuesto .  (20)

	.  reduce 20


state 47
	decl_func : $$1 FUNC tipo ID . LPAR argumentos RPAR bloque decl_func  (25)

	LPAR  shift 50
	.  error


48: shift/reduce conflict (shift 2, reduce 6) on PROTO
state 48
	decl_proto : PROTO tipo ID LPAR argumentos RPAR SEMICOLON . decl_proto  (5)
	decl_proto : .  (6)

	PROTO  shift 2
	$end  reduce 6
	STRUCT  reduce 6
	PTR  reduce 6
	INT  reduce 6
	FLOAT  reduce 6
	DOUBLE  reduce 6
	COMPLEX  reduce 6
	RUNE  reduce 6
	VOID  reduce 6
	STRING  reduce 6
	FUNC  reduce 6

	decl_proto  goto 51


state 49
	lista_args : lista_args COMA tipo . ID  (29)

	ID  shift 52
	.  error


state 50
	decl_func : $$1 FUNC tipo ID LPAR . argumentos RPAR bloque decl_func  (25)
	argumentos : .  (28)

	STRUCT  shift 6
	PTR  shift 7
	INT  shift 8
	FLOAT  shift 9
	DOUBLE  shift 10
	COMPLEX  shift 11
	RUNE  shift 12
	VOID  shift 13
	STRING  shift 14
	RPAR  reduce 28

	tipo  goto 36
	argumentos  goto 53
	basico  goto 16
	puntero  goto 17
	lista_args  goto 38


state 51
	decl_proto : PROTO tipo ID LPAR argumentos RPAR SEMICOLON decl_proto .  (5)

	.  reduce 5


state 52
	lista_args : lista_args COMA tipo ID .  (29)

	.  reduce 29


state 53
	decl_func : $$1 FUNC tipo ID LPAR argumentos . RPAR bloque decl_func  (25)

	RPAR  shift 54
	.  error


state 54
	decl_func : $$1 FUNC tipo ID LPAR argumentos RPAR . bloque decl_func  (25)

	LLLAVE  shift 55
	.  error

	bloque  goto 56


state 55
	bloque : LLLAVE . declaraciones instrucciones RLLAVE  (31)
	decl_var : .  (8)

	STRUCT  shift 6
	PTR  shift 7
	INT  shift 8
	FLOAT  shift 9
	DOUBLE  shift 10
	COMPLEX  shift 11
	RUNE  shift 12
	VOID  shift 13
	STRING  shift 14
	ID  reduce 8
	IF  reduce 8
	WHILE  reduce 8
	DO  reduce 8
	BREAK  reduce 8
	RETURN  reduce 8
	SWITCH  reduce 8
	PRINT  reduce 8
	SCAN  reduce 8
	LLLAVE  reduce 8

	decl_var  goto 57
	tipo  goto 19
	basico  goto 16
	puntero  goto 17
	declaraciones  goto 58


56: reduce/reduce conflict (reduce 24, reduce 26) on FUNC
state 56
	decl_func : $$1 FUNC tipo ID LPAR argumentos RPAR bloque . decl_func  (25)
	$$1 : .  (24)
	decl_func : .  (26)

	$end  reduce 26
	PROTO  reduce 26
	STRUCT  reduce 26
	PTR  reduce 26
	INT  reduce 26
	FLOAT  reduce 26
	DOUBLE  reduce 26
	COMPLEX  reduce 26
	RUNE  reduce 26
	VOID  reduce 26
	STRING  reduce 26
	FUNC  reduce 24

	decl_func  goto 59
	$$1  goto 26


state 57
	declaraciones : decl_var .  (32)

	.  reduce 32


state 58
	bloque : LLLAVE declaraciones . instrucciones RLLAVE  (31)
	$$2 : .  (36)

	ID  shift 60
	IF  reduce 36
	WHILE  reduce 36
	DO  reduce 36
	BREAK  reduce 36
	RETURN  reduce 36
	SWITCH  reduce 36
	PRINT  reduce 36
	SCAN  reduce 36
	LLLAVE  reduce 36

	instrucciones  goto 61
	sentencia  goto 62
	asignacion  goto 63
	$$2  goto 64
	parte_izquierda  goto 65


state 59
	decl_func : $$1 FUNC tipo ID LPAR argumentos RPAR bloque decl_func .  (25)

	.  reduce 25


state 60
	parte_izquierda : ID . localizacion  (59)
	parte_izquierda : ID .  (60)

	LCORCHETE  shift 66
	PUNTO  shift 67
	ID  reduce 60
	IF  reduce 60
	ELSE  reduce 60
	WHILE  reduce 60
	DO  reduce 60
	BREAK  reduce 60
	RETURN  reduce 60
	SWITCH  reduce 60
	CASE  reduce 60
	PRINT  reduce 60
	SCAN  reduce 60
	LLLAVE  reduce 60
	RLLAVE  reduce 60
	ASIG  reduce 60
	PRED  reduce 60

	localizacion  goto 68
	arreglo  goto 69
	estructurado  goto 70


state 61
	bloque : LLLAVE declaraciones instrucciones . RLLAVE  (31)
	instrucciones : instrucciones . sentencia  (33)
	$$2 : .  (36)

	ID  shift 60
	RLLAVE  shift 71
	IF  reduce 36
	WHILE  reduce 36
	DO  reduce 36
	BREAK  reduce 36
	RETURN  reduce 36
	SWITCH  reduce 36
	PRINT  reduce 36
	SCAN  reduce 36
	LLLAVE  reduce 36

	sentencia  goto 72
	asignacion  goto 63
	$$2  goto 64
	parte_izquierda  goto 65


state 62
	instrucciones : sentencia .  (34)

	.  reduce 34


state 63
	sentencia : asignacion .  (35)

	.  reduce 35


state 64
	sentencia : $$2 . resolve  (37)

	IF  shift 73
	WHILE  shift 74
	DO  shift 75
	BREAK  shift 76
	RETURN  shift 77
	SWITCH  shift 78
	PRINT  shift 79
	SCAN  shift 80
	LLLAVE  shift 55
	.  error

	bloque  goto 81
	resolve  goto 82
	matched_stmt  goto 83


state 65
	asignacion : parte_izquierda . ASIG exp SEMICOLON  (52)

	ASIG  shift 84
	.  error


state 66
	arreglo : LCORCHETE . exp RCORCHETE  (64)

	RESTA  shift 85
	LPAR  shift 86
	ID  shift 87
	TRUE  shift 88
	FALSE  shift 89
	NEG  shift 90
	LITERAL_ENTERA  shift 91
	.  error

	exp  goto 92


state 67
	estructurado : PUNTO . ID  (66)

	ID  shift 93
	.  error


state 68
	parte_izquierda : ID localizacion .  (59)

	.  reduce 59


state 69
	localizacion : arreglo .  (61)
	arreglo : arreglo . LCORCHETE exp RCORCHETE  (63)

	LCORCHETE  shift 94
	ID  reduce 61
	IF  reduce 61
	ELSE  reduce 61
	WHILE  reduce 61
	DO  reduce 61
	BREAK  reduce 61
	RETURN  reduce 61
	SWITCH  reduce 61
	CASE  reduce 61
	PRINT  reduce 61
	SCAN  reduce 61
	LLLAVE  reduce 61
	RLLAVE  reduce 61
	ASIG  reduce 61
	PRED  reduce 61


state 70
	localizacion : estructurado .  (62)
	estructurado : estructurado . PUNTO ID  (65)

	PUNTO  shift 95
	ID  reduce 62
	IF  reduce 62
	ELSE  reduce 62
	WHILE  reduce 62
	DO  reduce 62
	BREAK  reduce 62
	RETURN  reduce 62
	SWITCH  reduce 62
	CASE  reduce 62
	PRINT  reduce 62
	SCAN  reduce 62
	LLLAVE  reduce 62
	RLLAVE  reduce 62
	ASIG  reduce 62
	PRED  reduce 62


state 71
	bloque : LLLAVE declaraciones instrucciones RLLAVE .  (31)

	.  reduce 31


state 72
	instrucciones : instrucciones sentencia .  (33)

	.  reduce 33


state 73
	matched_stmt : IF . LPAR exp1 RPAR M matched_stmt  (39)
	matched_stmt : IF . LPAR exp1 RPAR M matched_stmt ELSE N M matched_stmt  (40)

	LPAR  shift 96
	.  error


state 74
	matched_stmt : WHILE . LPAR M exp1 RPAR M matched_stmt  (41)

	LPAR  shift 97
	.  error


state 75
	matched_stmt : DO . matched_stmt WHILE LPAR exp RPAR SEMICOLON  (42)

	IF  shift 73
	WHILE  shift 74
	DO  shift 75
	BREAK  shift 76
	RETURN  shift 77
	SWITCH  shift 78
	PRINT  shift 79
	SCAN  shift 80
	LLLAVE  shift 55
	.  error

	bloque  goto 81
	matched_stmt  goto 98


state 76
	matched_stmt : BREAK . SEMICOLON  (43)

	SEMICOLON  shift 99
	.  error


state 77
	matched_stmt : RETURN . exp SEMICOLON  (45)
	matched_stmt : RETURN . SEMICOLON  (46)

	RESTA  shift 85
	LPAR  shift 86
	ID  shift 87
	TRUE  shift 88
	FALSE  shift 89
	SEMICOLON  shift 100
	NEG  shift 90
	LITERAL_ENTERA  shift 91
	.  error

	exp  goto 101


state 78
	matched_stmt : SWITCH . LPAR exp RPAR LLLAVE casos RLLAVE  (47)

	LPAR  shift 102
	.  error


state 79
	matched_stmt : PRINT . exp SEMICOLON  (48)

	RESTA  shift 85
	LPAR  shift 86
	ID  shift 87
	TRUE  shift 88
	FALSE  shift 89
	NEG  shift 90
	LITERAL_ENTERA  shift 91
	.  error

	exp  goto 103


state 80
	matched_stmt : SCAN . parte_izquierda  (49)

	ID  shift 60
	.  error

	parte_izquierda  goto 104


state 81
	matched_stmt : bloque .  (44)

	.  reduce 44


state 82
	sentencia : $$2 resolve .  (37)

	.  reduce 37


state 83
	resolve : matched_stmt . M  (38)
	M : .  (50)

	.  reduce 50

	M  goto 105


state 84
	asignacion : parte_izquierda ASIG . exp SEMICOLON  (52)

	RESTA  shift 85
	LPAR  shift 86
	ID  shift 87
	TRUE  shift 88
	FALSE  shift 89
	NEG  shift 90
	LITERAL_ENTERA  shift 91
	.  error

	exp  goto 106


state 85
	exp : RESTA . exp  (77)

	RESTA  shift 85
	LPAR  shift 86
	ID  shift 87
	TRUE  shift 88
	FALSE  shift 89
	NEG  shift 90
	LITERAL_ENTERA  shift 91
	.  error

	exp  goto 107


state 86
	exp : LPAR . exp RPAR  (75)

	RESTA  shift 85
	LPAR  shift 86
	ID  shift 87
	TRUE  shift 88
	FALSE  shift 89
	NEG  shift 90
	LITERAL_ENTERA  shift 91
	.  error

	exp  goto 108


state 87
	exp : ID .  (90)
	exp : ID . '(' parametros ')'  (91)

	'('  shift 109
	SUMA  reduce 90
	RESTA  reduce 90
	MULTI  reduce 90
	DIVI  reduce 90
	POTE  reduce 90
	RPAR  reduce 90
	RCORCHETE  reduce 90
	COMA  reduce 90
	SEMICOLON  reduce 90
	OR  reduce 90
	AND  reduce 90
	IGUAL  reduce 90
	DESIGUAL  reduce 90
	MENORQUE  reduce 90
	MENORIGUAL  reduce 90
	MAYORQUE  reduce 90
	MAYORIGUAL  reduce 90
	MOD  reduce 90
	DIVENTERA  reduce 90
	')'  reduce 90


state 88
	exp : TRUE .  (92)

	.  reduce 92


state 89
	exp : FALSE .  (93)

	.  reduce 93


state 90
	exp : NEG . exp  (89)

	RESTA  shift 85
	LPAR  shift 86
	ID  shift 87
	TRUE  shift 88
	FALSE  shift 89
	NEG  shift 90
	LITERAL_ENTERA  shift 91
	.  error

	exp  goto 110


state 91
	exp : LITERAL_ENTERA .  (71)

	.  reduce 71


state 92
	arreglo : LCORCHETE exp . RCORCHETE  (64)
	exp : exp . SUMA exp  (72)
	exp : exp . RESTA exp  (73)
	exp : exp . MULTI exp  (74)
	exp : exp . DIVI exp  (76)
	exp : exp . POTE exp  (78)
	exp : exp . OR M exp  (79)
	exp : exp . AND exp  (80)
	exp : exp . IGUAL exp  (81)
	exp : exp . DESIGUAL exp  (82)
	exp : exp . MENORQUE exp  (83)
	exp : exp . MENORIGUAL exp  (84)
	exp : exp . MAYORQUE exp  (85)
	exp : exp . MAYORIGUAL exp  (86)
	exp : exp . MOD exp  (87)
	exp : exp . DIVENTERA exp  (88)

	SUMA  shift 111
	RESTA  shift 112
	MULTI  shift 113
	DIVI  shift 114
	POTE  shift 115
	RCORCHETE  shift 116
	OR  shift 117
	AND  shift 118
	IGUAL  shift 119
	DESIGUAL  shift 120
	MENORQUE  shift 121
	MENORIGUAL  shift 122
	MAYORQUE  shift 123
	MAYORIGUAL  shift 124
	MOD  shift 125
	DIVENTERA  shift 126
	.  error


state 93
	estructurado : PUNTO ID .  (66)

	.  reduce 66


state 94
	arreglo : arreglo LCORCHETE . exp RCORCHETE  (63)

	RESTA  shift 85
	LPAR  shift 86
	ID  shift 87
	TRUE  shift 88
	FALSE  shift 89
	NEG  shift 90
	LITERAL_ENTERA  shift 91
	.  error

	exp  goto 127


state 95
	estructurado : estructurado PUNTO . ID  (65)

	ID  shift 128
	.  error


state 96
	matched_stmt : IF LPAR . exp1 RPAR M matched_stmt  (39)
	matched_stmt : IF LPAR . exp1 RPAR M matched_stmt ELSE N M matched_stmt  (40)

	LPAR  shift 129
	ID  shift 130
	TRUE  shift 131
	FALSE  shift 132
	NEG  shift 133
	LITERAL_ENTERA  shift 134
	.  error

	exp1  goto 135


state 97
	matched_stmt : WHILE LPAR . M exp1 RPAR M matched_stmt  (41)
	M : .  (50)

	.  reduce 50

	M  goto 136


state 98
	matched_stmt : DO matched_stmt . WHILE LPAR exp RPAR SEMICOLON  (42)

	WHILE  shift 137
	.  error


state 99
	matched_stmt : BREAK SEMICOLON .  (43)

	.  reduce 43


state 100
	matched_stmt : RETURN SEMICOLON .  (46)

	.  reduce 46


state 101
	matched_stmt : RETURN exp . SEMICOLON  (45)
	exp : exp . SUMA exp  (72)
	exp : exp . RESTA exp  (73)
	exp : exp . MULTI exp  (74)
	exp : exp . DIVI exp  (76)
	exp : exp . POTE exp  (78)
	exp : exp . OR M exp  (79)
	exp : exp . AND exp  (80)
	exp : exp . IGUAL exp  (81)
	exp : exp . DESIGUAL exp  (82)
	exp : exp . MENORQUE exp  (83)
	exp : exp . MENORIGUAL exp  (84)
	exp : exp . MAYORQUE exp  (85)
	exp : exp . MAYORIGUAL exp  (86)
	exp : exp . MOD exp  (87)
	exp : exp . DIVENTERA exp  (88)

	SUMA  shift 111
	RESTA  shift 112
	MULTI  shift 113
	DIVI  shift 114
	POTE  shift 115
	SEMICOLON  shift 138
	OR  shift 117
	AND  shift 118
	IGUAL  shift 119
	DESIGUAL  shift 120
	MENORQUE  shift 121
	MENORIGUAL  shift 122
	MAYORQUE  shift 123
	MAYORIGUAL  shift 124
	MOD  shift 125
	DIVENTERA  shift 126
	.  error


state 102
	matched_stmt : SWITCH LPAR . exp RPAR LLLAVE casos RLLAVE  (47)

	RESTA  shift 85
	LPAR  shift 86
	ID  shift 87
	TRUE  shift 88
	FALSE  shift 89
	NEG  shift 90
	LITERAL_ENTERA  shift 91
	.  error

	exp  goto 139


state 103
	matched_stmt : PRINT exp . SEMICOLON  (48)
	exp : exp . SUMA exp  (72)
	exp : exp . RESTA exp  (73)
	exp : exp . MULTI exp  (74)
	exp : exp . DIVI exp  (76)
	exp : exp . POTE exp  (78)
	exp : exp . OR M exp  (79)
	exp : exp . AND exp  (80)
	exp : exp . IGUAL exp  (81)
	exp : exp . DESIGUAL exp  (82)
	exp : exp . MENORQUE exp  (83)
	exp : exp . MENORIGUAL exp  (84)
	exp : exp . MAYORQUE exp  (85)
	exp : exp . MAYORIGUAL exp  (86)
	exp : exp . MOD exp  (87)
	exp : exp . DIVENTERA exp  (88)

	SUMA  shift 111
	RESTA  shift 112
	MULTI  shift 113
	DIVI  shift 114
	POTE  shift 115
	SEMICOLON  shift 140
	OR  shift 117
	AND  shift 118
	IGUAL  shift 119
	DESIGUAL  shift 120
	MENORQUE  shift 121
	MENORIGUAL  shift 122
	MAYORQUE  shift 123
	MAYORIGUAL  shift 124
	MOD  shift 125
	DIVENTERA  shift 126
	.  error


state 104
	matched_stmt : SCAN parte_izquierda .  (49)

	.  reduce 49


state 105
	resolve : matched_stmt M .  (38)

	.  reduce 38


state 106
	asignacion : parte_izquierda ASIG exp . SEMICOLON  (52)
	exp : exp . SUMA exp  (72)
	exp : exp . RESTA exp  (73)
	exp : exp . MULTI exp  (74)
	exp : exp . DIVI exp  (76)
	exp : exp . POTE exp  (78)
	exp : exp . OR M exp  (79)
	exp : exp . AND exp  (80)
	exp : exp . IGUAL exp  (81)
	exp : exp . DESIGUAL exp  (82)
	exp : exp . MENORQUE exp  (83)
	exp : exp . MENORIGUAL exp  (84)
	exp : exp . MAYORQUE exp  (85)
	exp : exp . MAYORIGUAL exp  (86)
	exp : exp . MOD exp  (87)
	exp : exp . DIVENTERA exp  (88)

	SUMA  shift 111
	RESTA  shift 112
	MULTI  shift 113
	DIVI  shift 114
	POTE  shift 115
	SEMICOLON  shift 141
	OR  shift 117
	AND  shift 118
	IGUAL  shift 119
	DESIGUAL  shift 120
	MENORQUE  shift 121
	MENORIGUAL  shift 122
	MAYORQUE  shift 123
	MAYORIGUAL  shift 124
	MOD  shift 125
	DIVENTERA  shift 126
	.  error

